samples/_failures_safe/1761605744_26189f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1e09168.c: In function ‘main’:
./samples/SAFE/__tmp_c1e09168.c:152:17: error: expected declaration or statement at end of input
  152 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_c1e09168.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c1e09168.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c1e09168.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c1e09168.c:152:17: error: expected declaration or statement at end of input
